--- a/src/components/registerForm.css
+++ b/src/components/registerForm.css
@@ -13,6 +13,8 @@ label, input {
   padding: 2% 0;
   margin: 2% 0; 
   border: none;
+  background-color: #eee;
+  border-radius: 5px;
   margin: 5% 0.5%;
 }
 
