--- a/src/pages/Test/Test.css
+++ b/src/pages/Test/Test.css
@@ -1,11 +1,11 @@
 .test-page {
-  margin-top: 10rem;
+  margin-top: 6rem;
 }
 
 .test-container {
   position: relative;
   border: 1px solid grey;
-  max-width: 40%;
+  max-width: 80%;
   height: 100%;
   margin: 0 auto 4rem;
   background-color: white;
@@ -25,7 +25,7 @@
 .test-timer {
   position: absolute;
   left: 0;
-  top: -4rem;
+  top: -3rem;
 }
 
 .test-question-number {
@@ -39,9 +39,10 @@
 }
 
 .answers-container button {
-  width: 50%;
+  width: 14.28%;
   padding: 0.5rem 0;
-  margin: 0.5rem 0
+  margin: 0.5rem 0;
+  height: 5rem;
 }
 
 .test-button {
@@ -50,4 +51,22 @@
   bottom: 2rem;
   padding: 0.5rem 2rem;
   border-radius: 5px;
+}
+
+@media only screen and (min-width: 640px){
+
+  .test-page {
+    margin-top: 10rem;
+  }
+
+  .test-timer {
+    position: absolute;
+    left: 0;
+    top: -4rem;
+  }
+
+  .test-container {
+    max-width: 40%;
+  }
+
 }
