updated fetch test

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -20,7 +20,7 @@
   width: 8rem;
   text-align: center;
   margin: 2rem;
-  background-color: grey
+  background-color: rgb(211, 211, 211)
 }
 
 .user-image p {
