--- a/src/components/loginButton.css
+++ b/src/components/loginButton.css
@@ -1,5 +1,42 @@
 .dashboard-button {
-  padding: 0.5%;
-  position: absolute;
-  right: 1%;
+  padding: 11% 18%;
+  background: transparent;
+  color: #5c6ac4;
+  box-shadow: inset 0 0 0 2px #5c6ac4;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: box-shadow .25s linear;
+}
+
+.dashboard-button:hover:enabled {
+  background-color: #5c6ac4;
+  color: #fff;
+}
+
+.dashboard-button:active {
+  margin-top: scale(0.5);
+  margin-bottom: 0;
+  background-color: color(blue);
+  color: lighten(color(white), 50);
+  opacity: 1;
+}
+
+.dashboard-button:focus {
+  background-color: color(blue);
+  outline: 0;
+}
+
+.dashboard-button:disabled {
+  background: color(steel);
+  color: color(black, light);
+  box-shadow: none;
+}
+
+@media only screen and (min-width: 960px){
+  .dashboard-button{
+    font-size: 11px;
+    padding: 8% 9%;
+  }
 }
