--- a/src/components/registerForm.css
+++ b/src/components/registerForm.css
@@ -8,17 +8,43 @@ label, input {
   text-align: left;
 }
 
-.register-form button {
+
+.register-input {
+  padding: 0px;
+  position: relative;
   width: 100%;
-  padding: 2% 0;
-  margin: 2% 0; 
+  border: 1px solid #5c6ac4;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(33, 43, 54);
+  cursor: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  opacity: 1;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.register-button {
+  box-sizing: border-box;
+  margin-bottom: 2px;
+  padding: 10px 25px;
   border: none;
-  background-color: #eee;
-  border-radius: 5px;
-  margin: 5% 0.5%;
+  border-radius: 4px;
+  background-color: #5c6ac4;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.em;
+  font-weight: 600;
+  text-transform: uppercase;
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,.25);
+  transition: box-shadow .25s linear;
+  width: 100%;
+  /* margin: 5% 0.5%; */
 }
 
 .register-form-container {
-  max-width: 30%;
+  max-width: 70%;
   margin: 0 auto;
 }
