--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -1,6 +1,4 @@
-.landing-page header {
-  padding: 12% 0;
-}
+
 
 .landing h3 {
   font-size: 1em;
@@ -9,13 +7,89 @@
 .landing-page section {
   min-height: 200px; 
   padding: 6% 0;
-  background-color: #bbb;
+  background-color: #fff;
 }
 
-.landing-page section:nth-child(even) {
-  background-color: #ddd;
-}
 
 li {
   list-style: none;
+}
+
+/* === HERO SECTION === */
+
+.landing-page header {
+  padding: 12% 8%;
+}
+
+.hero-section h1 {
+  font-size: 1.7em;
+}
+
+.hero-section {
+  background-color: #fbfbfb; 
+}
+
+.hero-section h3 {
+  margin-bottom: 1.1em;;
+}
+
+.hero-section p {
+  margin-bottom: 2em
+}
+
+
+.hero-button {
+  box-sizing: border-box;
+  margin-bottom: 2px;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 4px;
+  background-color: #5c6ac4;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.em;
+  font-weight: 600;
+  text-transform: uppercase;
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,.25);
+  transition: box-shadow .25s linear;
+
+}
+
+@media only screen and (min-width: 960px){
+  
+}
+
+/* === DETAILS SECTION === */
+
+.details-section p,
+.features-section p,
+li {
+  color: #637381
+}
+
+.register-input {
+  padding: 0px;
+  position: relative;
+  width: 100%;
+  border: 1px solid #5c6ac4;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(33, 43, 54);
+  cursor: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  opacity: 1;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.detail {
+  margin: 0 auto;
+  width: 60%;
+}
+
+.icon-container{
+  margin: 2rem auto;
+  width: 40%;
 }
