--- a/src/components/registerForm.css
+++ b/src/components/registerForm.css
@@ -1,29 +1,73 @@
-label, input {
-  width: 100%;
-  padding: 2% 0;
-  margin: 2% 0; 
-}
 
-.register-form {
-  text-align: left;
-}
-
-
-.register-input {
-  padding: 0px;
+.group {
   position: relative;
+  margin-bottom: 2rem;
+}
+
+.group:first-child{
+  margin-top: 2rem;
+}
+
+
+input {
+  
+  display: block;
   width: 100%;
-  border: 1px solid #5c6ac4;
+  font-size: 18px;
   outline: none;
-  background-color: rgba(0, 0, 0, 0);
-  color: rgb(33, 43, 54);
-  cursor: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  opacity: 1;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  height: 100%;
-  box-sizing: border-box;
+  background: none;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #b2b3becb;
+  padding: 10px 10px 10px 5px;
+
+}
+
+input:focus {
+  outline: none;
+}
+
+input:focus ~ label {
+  top: -14px;
+  font-size: 12px;
+  color: #5c6ac4;
+}
+
+input:focus ~ .bar:before {
+  width: 100%;
+}
+
+.valid-input {
+  top: -14px;
+  font-size: 12px;
+  color: #5c6ac4;
+}
+
+label {
+  color: #b2b3becb;
+  font-size: 16px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 300ms ease all;
+}
+
+.bar {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+.bar:before {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 0px;
+  position: absolute;
+  background: #5c6ac4;
+  transition: 300ms ease all;
+  left: 0%;
 }
 
 .register-button {
@@ -38,13 +82,30 @@ label, input {
   font-size: 1.em;
   font-weight: 600;
   text-transform: uppercase;
-  box-shadow: 0 10px 20px 0 rgba(0,0,0,.25);
+  /* box-shadow: 0 10px 20px 0 rgba(0,0,0,.25); */
   transition: box-shadow .25s linear;
   width: 100%;
   /* margin: 5% 0.5%; */
 }
 
+.register-button:hover {
+  color: #fff;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
+}
+
 .register-form-container {
   max-width: 70%;
   margin: 0 auto;
+}
+
+.form-error,
+.form-warning {
+  color: #ec2c2cdc;
+  font-size: 13px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  right: 0px;
+  top: -14px;
+  transition: 300ms ease all;
 }
