--- a/src/pages/Sign-In/signIn.css
+++ b/src/pages/Sign-In/signIn.css
@@ -1,5 +1,49 @@
+.sign-in-header {
+  margin: 4rem auto 0;
+  width: 40%;
+}
+
 .sign-in-form-container {
   padding: 3rem 0;
-  width: 40%;
+  width: 60%;
   margin: 0 auto;
+}
+
+.sign-in-button {
+  box-sizing: border-box;
+  margin-bottom: 2px;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 4px;
+  background-color: #5c6ac4;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.em;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: background-color .25s linear;
+  width: 100%;
+  /* margin: 5% 0.5%; */
+}
+
+.sign-in-button:hover {
+  background-color: #5260b1;
+}
+
+.sign-in-register-button {
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: 600;
+  text-transform: uppercase;
+  background: transparent;
+  color: #5c6ac4;
+  box-shadow: none;
+  padding: 8px 16px;
+  width: 100%;
+  transition: background-color .25s linear;
+}
+
+.sign-in-register-button:hover:enabled {
+  background-color: #dfe4e8
 }
