--- a/src/components/loginButton.css
+++ b/src/components/loginButton.css
@@ -1,5 +1,9 @@
+.dashboard-button-container {
+  width: 25%;
+}
+
 .dashboard-button {
-  padding: 11% 18%;
+  padding: 6% 9%;
   background: transparent;
   color: #5c6ac4;
   box-shadow: inset 0 0 0 2px #5c6ac4;
