--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,13 +1,20 @@
 .sidebar-links {
-  padding: 0;
+  background-color: #ffffff;
+  padding-top: 4rem;
   position: fixed;
   left: 0;
-  top: 5rem;
-  bottom: 5rem;
-  width: 20%;
-  height: 80vh;
-  border-right: 1px solid #aaa
+  top: 0;
+  z-index: 51;
+  width: 40%;
+  height: 100%;
+  transition: 300ms ease all;
+  box-shadow: 0px 10px 10px rgb(206, 206, 206);
 }
+
+.sidebar-left {
+  left: -40%;
+}
+
 .sidebar-links ul {
   margin: 1rem;
 }
@@ -16,10 +23,11 @@
   margin: 1rem;
 }
 .user-image {
+  position: relative;
   border: 1px solid #aaa;
   width: 8rem;
   text-align: center;
-  margin: 2rem;
+  margin: 0.5rem;
   background-color: rgb(211, 211, 211)
 }
 
@@ -29,4 +37,17 @@
 
 .sidebar-links ul {
   list-style: none;
+}
+
+.toggle-menu-button {
+  z-index: 50;
+  border-radius: 4px;
+  background-color: rgb(118, 160, 202);
+  padding: 5% 0;
+  cursor: pointer; 
+  position: absolute;
+  right: -50px;
+  bottom: -50px;
+  width: 30%;
+  
 }
