--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -1,10 +1,32 @@
 .dashboard {
-  margin-left: 20%;
+  /* margin-left: 20%; */
 }
 
 .test-area {
-  margin: 5rem;
-  width: 70%;
+  margin: 3rem auto;
+  width: 80%;
+  border-radius: 4px; 
+  /* border: 1px solid grey;  */
+  box-shadow: 1px 2px 20px rgb(206, 206, 206);
+  padding: 4%;
+}
+
+.test-area header {
+  color: rgb(243, 243, 243);
+  border: 1px solid grey;
+  padding: 5%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.practice-test header{
+  background-image: linear-gradient(rgba(99, 99, 99, 0.801), rgba(127, 128, 129, 0.589)),
+    url(https://res.cloudinary.com/khrisraymond/image/upload/v1544163323/imgs/music-test/sheetmusic.jpg);
+}
+
+.test header {
+  background-image: linear-gradient(rgba(99, 99, 99, 0.801), rgba(127, 128, 129, 0.589)),
+    url(https://res.cloudinary.com/khrisraymond/image/upload/v1544163328/imgs/music-test/classroom.jpg);
 }
 
 .test-area header {
@@ -13,11 +35,21 @@
 
 .options-buttons {
   margin: 10% 0 2%;
+  font-size: 12px;
+  color: rgb(173, 172, 172)
 }
 
-.options-buttons button {
-  display: inline-block;
+.dashboard-test-button {
   width: 100%;
-  margin: 2% 0;
-  padding: 2%;
+  box-sizing: border-box;
+  margin: 4% 0;
+  padding: 10px 25px;
+  border: 2px solid rgb(243, 243, 243);;
+  border-radius: 4px;
+  background-color: rgb(243, 243, 243);;
+  color: rgb(84, 97, 139);
+  cursor: pointer;
+  font-size: 1.em;
+  font-weight: 600;
+  text-transform: uppercase;
 }
