--- a/src/components/loginButton.css
+++ b/src/components/loginButton.css
@@ -11,7 +11,7 @@
   border-radius: 4px;
   font-weight: 600;
   text-transform: uppercase;
-  transition: box-shadow .25s linear;
+  transition: background-color .2s linear;
 }
 
 .dashboard-button:hover:enabled {
@@ -39,8 +39,13 @@
 }
 
 @media only screen and (min-width: 960px){
+  .dashboard-button-container {
+    width: 10%;
+  }
+  
   .dashboard-button{
     font-size: 11px;
-    padding: 8% 9%;
+    padding: 6% 10%;
   }
+
 }
