--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -50,9 +50,12 @@ li {
   font-size: 1.em;
   font-weight: 600;
   text-transform: uppercase;
-  box-shadow: 0 10px 20px 0 rgba(0,0,0,.25);
+  /* box-shadow: 0 10px 20px 0 rgba(0,0,0,.25); */
   transition: box-shadow .25s linear;
+}
 
+.hero-button:hover {
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
 }
 
 @media only screen and (min-width: 960px){
@@ -64,7 +67,8 @@ li {
 .details-section p,
 .features-section p,
 li {
-  color: #637381
+  color: #637381;
+  line-height: 25px;
 }
 
 .register-input {
@@ -92,4 +96,34 @@ li {
 .icon-container{
   margin: 2rem auto;
   width: 40%;
+}
+
+.features-section {
+  margin: 0 2rem;
+}
+
+.features-section li {
+  text-align: left;
+  list-style-type: circle;
+}
+
+.features-section p {
+  font-size: 1.5em;
+}
+
+@media only screen and (min-width: 960px){
+  .icon-container,
+  .detail {
+    width: 40%;
+  }
+
+  .features-section {
+    width: 40%;
+    margin: 0 auto;
+  }
+
+  .features-section ul {
+    padding-left: 5rem;
+  }
+
 }
