--- a/src/pages/Results/results.css
+++ b/src/pages/Results/results.css
@@ -60,6 +60,24 @@
   padding: 10px 25px;
   border: 2px solid rgb(243, 243, 243);;
   border-radius: 4px;
+  box-shadow: 0;
   background-color: rgb(243, 243, 243);;
   color: rgb(84, 97, 139);
+  transition: box-shadow .2s linear;
+}
+
+.take-again-button:hover {
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
+}
+
+@media only screen and (min-width: 960px){
+  
+.results-container{
+  width: 60%;
+}
+
+.score-details {
+  font-size: 1.5em;
+}
+  
 }
