--- a/src/pages/Test/piano-keys.css
+++ b/src/pages/Test/piano-keys.css
@@ -15,7 +15,7 @@ ul {
   clear: both;
 }
 
-li { 
+.piano-key { 
   margin:0; 
   padding:0; 
   list-style:none; 
@@ -23,11 +23,11 @@ li {
   float:left; 
 }
 
-ul .note-name {
+.set .note-name {
   width: 18%;
 }
 
-ul .white {
+.set .white {
 	height:10em; width: 15%; max-width: 15%; z-index:1;
 	border-left:1px solid #bbb;
 	border-bottom:1px solid #bbb;
@@ -59,24 +59,24 @@ ul .white:active {
 
 .C, .D, .E, .G, .A, .B { margin:0 0 0 -1em;  }
 
-ul li:first-child { 
+.set ul li:first-child { 
   border-radius:5px 0 5px 5px; 
   margin-left: -1.5rem;
 }
-ul li:last-child { border-radius:0 5px 5px 5px; }
+.set ul li:last-child { border-radius:0 5px 5px 5px; }
 
 @media only screen and (min-width: 960px) {
   ul .note-name {
     width: 18%;
   }
 
-  ul .white {
+  .set ul .white {
     height: 10em;
     width: 16.4%;
     max-width: 17%;
   }
 
-  .black {
+  .set .black {
     height: 5em;
     max-width: 7%;
     min-width: 5%;
