--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -1,11 +1,12 @@
-.nav-fixed {
+  .nav-fixed {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 100;
   text-align: left;
-  background-color: #fff
+  background-color: #fff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);;
 }
 
 .nav-fixed,
