--- a/src/pages/Test/piano-keys.css
+++ b/src/pages/Test/piano-keys.css
@@ -11,6 +11,7 @@ ul {
 }
 
 .set {
+  position: relative;
   width: 100%;
   clear: both;
 }
@@ -64,6 +65,24 @@ ul .white:active {
   margin-left: -1.5rem;
 }
 .set ul li:last-child { border-radius:0 5px 5px 5px; }
+
+
+
+/* === OVERLAY === */
+
+.overlay {
+  background-image: linear-gradient(rgba(221, 221, 221, 0.418), rgba(206, 205, 205, 0.438));
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: -240px; 
+  z-index: 10;
+  transition: left .2s linear
+}
+
+.overlay:focus {
+  left: 0
+}
 
 @media only screen and (min-width: 960px) {
   ul .note-name {
