--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -120,6 +120,11 @@ li {
 
 /* === FEATURES SECTION === */
 
+.landing-page section:nth-child(3){
+  background-color: #f1f2fda6;
+  padding-bottom: 8%;
+}
+
 .features-section {
   margin: 0 2rem;
 }
