--- a/src/pages/Test/piano-keys.css
+++ b/src/pages/Test/piano-keys.css
@@ -71,17 +71,14 @@ ul .white:active {
 /* === OVERLAY === */
 
 .overlay {
-  background-image: linear-gradient(rgba(221, 221, 221, 0.418), rgba(206, 205, 205, 0.438));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(rgba(221, 221, 221, 0.11), rgba(206, 205, 205, 0.082));
   width: 100%;
-  height: 100%;
+  height: 40%;
   position: absolute;
-  left: -240px; 
   z-index: 10;
-  transition: left .2s linear
-}
-
-.overlay:focus {
-  left: 0
 }
 
 @media only screen and (min-width: 960px) {
