--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,11 +1,13 @@
 .sidebar-links {
+  text-align: center;
+  font-size: 12px;
   background-color: #ffffff;
   padding-top: 4rem;
   position: fixed;
   left: 0;
   top: 0;
   z-index: 51;
-  width: 40%;
+  width: 50%;
   height: 100%;
   transition: 300ms ease all;
   box-shadow: 0px 10px 10px rgb(206, 206, 206);
@@ -16,7 +18,19 @@
 }
 
 .sidebar-links ul {
-  margin: 1rem;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-links ul::after {
+  content: ' ';
+  display: block;
+  margin: 3rem auto;
+  background-color: grey;
+  border-bottom: 1px solid gray;
+  width: 80%;
+  height: 10%;
+
 }
 
 .sidebar-links li {
@@ -31,8 +45,8 @@
   background-color: rgb(211, 211, 211)
 }
 
-.user-image p {
-  display: block;
+.user-image {
+  margin: 3rem auto;
 }
 
 .sidebar-links ul {
@@ -51,12 +65,18 @@
   width: 30%;
 }
 
-@media only screen and (min-width: 960px){
+.weekly-objectives li {
+  text-align: left;
+  padding-left: 3rem;
+}
+
+@media only screen and (min-width: 750px){
   .sidebar-links {
-    position: relative;
+    position: absolute;
     left: 0;
-    height: 100%;
+    height: 200%;
     width: 30%;
+    font-size: 14px;
   }
 
   .sidebar-left {
@@ -64,6 +84,6 @@
   }
 
   .toggle-menu-button {
-    z-index: 0;
+    display: none;
   }
 }
