--- a/src/components/myDashboardButton.css
+++ b/src/components/myDashboardButton.css
@@ -1,12 +1,31 @@
-.my-dashboard-button a {
+.my-dashboard-button-container {
+  width: 40%;
+}
+
+.my-dashboard-button {
   text-align: left;
   background-color: #5c6ac4;
   border-radius: 4px; 
-  width: 34%;
   color: #fff;
   font-weight: 600;
   font-size: 10px;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 2%;
+  padding: 6%;
+  transition: box-shadow .15s linear;
+}
+
+.my-dashboard-button a:hover {
+  box-shadow: 0 5px 10px rgb(206, 206, 206);
+}
+
+@media only screen and (min-width: 960px){
+
+  .my-dashboard-button-container {
+    width: 25%;
+  }
+
+  .my-dashboard-button {
+    padding: 5%;
+  }
 }
