--- a/src/pages/Sign-In/signIn.css
+++ b/src/pages/Sign-In/signIn.css
@@ -56,6 +56,17 @@
   left: 1em;
 }
 
+.demo-account {
+  display: flex;
+  width: 50%;
+  margin: 1em auto;
+}
+
+.demo-account p {
+  display: block;
+  width: 50%;
+}
+
 @media only screen and (min-width: 960px){
   .sign-in-form-container {
     width: 40%;
