--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -7,7 +7,7 @@
   width: 80%;
   border-radius: 4px; 
   /* border: 1px solid grey;  */
-  box-shadow: 1px 2px 20px rgb(206, 206, 206);
+  box-shadow: 1px 2px 10px rgb(206, 206, 206);
   padding: 4%;
 }
 
@@ -34,6 +34,10 @@
   margin: 10% 0 2%;
   font-size: 12px;
   color: rgb(173, 172, 172)
+}
+
+.options-buttons p {
+  margin-bottom: 1em;
 }
 
 .dashboard-test-button {
