--- a/src/pages/Test/piano-keys.css
+++ b/src/pages/Test/piano-keys.css
@@ -34,7 +34,7 @@ ul {
 	border-bottom:1px solid #bbb;
 	border-radius:0 0 5px 5px;
 	box-shadow:-1px 0 0 rgba(255,255,255,0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0,0,0,0.2);
-	background: linear-gradient(top, #eee 0%,#fff 100%);
+	background: linear-gradient(to top, #eee 0%,#fff 100%);
 }
 
 ul .white:active {
@@ -42,7 +42,7 @@ ul .white:active {
 	border-left:1px solid #999;
 	border-bottom:1px solid #999;
 	box-shadow:2px 0 3px rgba(0,0,0,0.1) inset, -5px 5px 20px rgba(0,0,0,0.2) inset,0 0 3px rgba(0,0,0,0.2);
-	background: linear-gradient(top, #fff 0%,#e9e9e9 100%);
+	background: linear-gradient(to top, #fff 0%,#e9e9e9 100%);
 }
 
 .black {
@@ -55,7 +55,7 @@ ul .white:active {
 
 .black:active {
 	box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset, 0 -2px 2px 3px rgba(0,0,0,0.6) inset, 0 1px 2px rgba(0,0,0,0.5);
-	background:linear-gradient(left, #444 0%,#222 100%);
+	background:linear-gradient(to left, #444 0%,#222 100%);
 } 
 
 .C, .D, .E, .G, .A, .B { margin:0 0 0 -1em;  }
