fixed scoring bug and added login persitance

--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -116,7 +116,8 @@ li {
 
 .icon-container{
   margin: 2rem auto;
-  width: 40%;
+  width: 50%;
+  max-width: 200px;
 }
 
 /* === FEATURES SECTION === */
