--- a/src/components/myDashboardButton.css
+++ b/src/components/myDashboardButton.css
@@ -15,8 +15,8 @@
   transition: box-shadow .15s linear;
 }
 
-.my-dashboard-button a:hover {
-  box-shadow: 0 5px 10px rgb(206, 206, 206);
+.my-dashboard-button:hover {
+  box-shadow: 0px 3px 10px rgb(153, 153, 153);
 }
 
 @media only screen and (min-width: 960px){
