--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -9,6 +9,7 @@
   z-index: 51;
   width: 50%;
   height: 100%;
+  max-height: 1450px;
   transition: 300ms ease all;
   box-shadow: 0px 10px 10px rgb(206, 206, 206);
 }
@@ -74,7 +75,7 @@
   .sidebar-links {
     position: absolute;
     left: 0;
-    height: 150%;
+    height: 200%;
     width: 30%;
     font-size: 14px;
   }
