edit nav for dashboard views

--- a/src/css/settings/_settings.scss
+++ b/src/css/settings/_settings.scss
@@ -8,6 +8,14 @@ $grey-color: #636363;
 $button-color: #3f72af;
 // $button-color: linear-gradient(-180deg, #6d92d3 0%, #304989 93%);
 
+// margins and padding sizes;
+
+$s: 10px;
+$m: 30px;
+$l: 100px;
+
+// device break points
+
 $break-small: 360px;
 $break-medium: 640px;
 $break-large: 940px;
