--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -8,14 +8,14 @@
   z-index: 51;
   width: 50%;
   height: 100%;
-  max-height: 1450px;
+  min-height: 1450px;
   transition: 300ms ease all;
   box-shadow: 0px 10px 10px rgb(206, 206, 206);
 }
 
-.sidebar-right {
+/* .sidebar-right {
   right: 51%;
-}
+} */
 
 .sidebar-links ul {
   margin: 0;
@@ -71,9 +71,7 @@
 
 @media only screen and (min-width: 750px) {
   .sidebar-links {
-    position: absolute;
-    right: 0;
-    height: 200%;
+    position: static;
     width: 30%;
     max-width: 300px;
     font-size: 14px;
