--- a/src/css/main.css
+++ b/src/css/main.css
@@ -165,10 +165,35 @@ li {
   }
 }
 
-.dashboard-section nav {
+.dashboard-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.dashboard-section .dashboard-content {
+  width: 100%;
+}
+
+.dashboard-section .dashboard-content nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 80%;
+  margin: 30px auto;
+  padding: 30px 0;
+  border-bottom: solid 0.5px #aaa;
+}
+
+.dashboard-section .dashboard-content nav ul li {
+  margin: 0 10px;
 }
 
 .test-area {
