--- a/src/pages/Dashboard/_dashboard.scss
+++ b/src/pages/Dashboard/_dashboard.scss
@@ -1,6 +1,23 @@
 .dashboard-section {
-  nav {
-    display: flex;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  .dashboard-content {
+    width: 100%;
+    nav {
+      ul {
+        display: flex;
+        justify-content: space-around;
+        width: 80%;
+        margin: $m auto;
+        padding: $m 0;
+        border-bottom: solid 0.5px #aaa;
+        li {
+          margin: 0 10px;
+        }
+      }
+    }
   }
 }
 
@@ -10,15 +27,15 @@
   border-radius: 4px;
   box-shadow: 1px 2px 10px rgb(206, 206, 206);
   padding: 4%;
-}
 
-.test-area header {
-  color: rgb(243, 243, 243);
-  border: 1px solid grey;
-  padding: 5%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
+  header {
+    color: rgb(243, 243, 243);
+    border: 1px solid grey;
+    padding: 5%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+  }
 }
 
 .practice-test header {
