--- a/src/pages/Dashboard/_dashboard.scss
+++ b/src/pages/Dashboard/_dashboard.scss
@@ -3,7 +3,26 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  .dashboard-content {
+  .hero {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: left;
+    width: 80%;
+    margin: $m auto;
+    padding: $m;
+    border: 1px solid #aaa;
+    font-size: 14px;
+    .gear-icon {
+      width: 50px;
+      height: 50px;
+      h3 {
+        margin: 0;
+        font-size: 12px;
+        text-align: center;
+      }
+    }
+  }
+  .content {
     width: 100%;
     nav {
       ul {
@@ -15,6 +34,10 @@
         border-bottom: solid 0.5px #aaa;
         li {
           margin: 0 10px;
+          a {
+            text-decoration: none;
+            color: black;
+          }
         }
       }
     }
